Fix #16997 - [Feature] Add nutrient preparation reconstitution

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -55,14 +55,15 @@
           <show force="false" id="bcpg:productDensity"/>
           <show force="true" id="bcpg:netVolume"/>
           <show force="false" id="bcpg:productLossPerc"/>
-          
           <show force="true" id="bcpg:servingSize"/>
           <show force="true" id="bcpg:servingSizeUnit"/>
           <show force="true" id="bcpg:servingSizeText"/>
           <show force="true" id="bcpg:numberOfServings"/>
           <show force="true" id="bcpg:nutrientPreparationState"/>
           <show force="true" id="bcpg:nutrientPreparedUnit"/>
-          
+          <show force="false" id="bcpg:nutrientPreparationQty" />
+          <show force="false" id="bcpg:nutrientPreparationReconstituantRef"/>
+          <show force="false" id="bcpg:nutrientPreparationReconstituantQty"/>
           <show force="false" id="bcpg:productSpecifications"/>
           <show for-mode="view" force="false" id="bcpg:ecoScore"/>
           <show for-mode="view" force="false" id="bcpg:ecoScoreDetails"/>
@@ -487,8 +488,7 @@
           </field>
           
           <field id="bcpg:productLossPerc" mandatory="false" read-only="false" set="formulation"/>
-          
-          <field help-id="becpg.forms.help.servingSize" id="bcpg:servingSize" mandatory="false" read-only="false" set="formulation"/>
+          <field help-id="becpg.forms.help.servingSize" id="bcpg:servingSize" mandatory="false" read-only="false" set="formulation"/>          
           <field id="bcpg:servingSizeUnit" mandatory="false" read-only="false" set="formulation"/>
           <field id="bcpg:servingSizeText" mandatory="false" read-only="false" set="formulation">
             <control template="/org/alfresco/components/form/controls/textfield.ftl"/>
@@ -498,6 +498,17 @@
           </field>   
           <field  help-id="becpg.forms.help.nutrientPreparationState" id="bcpg:nutrientPreparationState" mandatory="false" read-only="false" set="formulation"> </field>
           <field  id="bcpg:nutrientPreparedUnit" mandatory="false" read-only="false" set="formulation"> </field>
+          <field  id="bcpg:nutrientPreparationQty" mandatory="false" read-only="false" set="formulation"> </field>
+          <field  id="bcpg:nutrientPreparationReconstituantRef" mandatory="false" read-only="false" set="formulation">
+         		 <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/product?classNames=bcpg:rawMaterial%5E4,bcpg:finishedProduct,bcpg:localSemiFinishedProduct%5E2,bcpg:semiFinishedProduct%5E2
+							</control-param>
+						</control>
+          </field>
+          <field  id="bcpg:nutrientPreparationReconstituantQty" mandatory="false" read-only="false" set="formulation"> </field>
+       
+          
+          
           <field help-id="becpg.forms.help.productSpecifications" id="bcpg:productSpecifications" mandatory="false" read-only="false" set="formulation">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
               <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
@@ -1345,7 +1356,10 @@
           <show force="true" id="bcpg:servingSizeText"/>
           <show force="true" id="bcpg:numberOfServings"/>
           <show force="true" id="bcpg:nutrientPreparationState"/>
-          <show force="true" id="bcpg:nutrientPreparedUnit"/>
+          <show force="false" id="bcpg:nutrientPreparedUnit"/>
+          <show force="false" id="bcpg:nutrientPreparationQty" />
+          <show force="false" id="bcpg:nutrientPreparationReconstituantRef"/>
+          <show force="false" id="bcpg:nutrientPreparationReconstituantQty"/>
           <show for-mode="view" force="true" id="bcpg:nutrientProfilingScore"/>
           <show for-mode="view" force="true" id="bcpg:nutrientProfilingDetails"/>
           <show force="true" id="bcpg:nutrientProfileCategory"/>
@@ -2057,6 +2071,8 @@
           <show force="true" id="bcpg:numberOfServings"/>
           <show force="true" id="bcpg:nutrientPreparationState"/>
           <show force="true" id="bcpg:nutrientPreparedUnit"/>
+          <show force="true" id="bcpg:nutrientPreparationReconstituantRef"/>
+		  <show force="true" id="bcpg:nutrientPreparationReconstituantQty"/>
           <show force="false" id="bcpg:productSpecifications"/>
           <show force="true" id="bcpg:useByDate"/>
           <show force="true" id="bcpg:bestBeforeDate"/>
@@ -2197,6 +2213,14 @@
           </field>
            <field  id="bcpg:nutrientPreparationState" mandatory="false" read-only="false" set="formulation"> </field>
            <field  id="bcpg:nutrientPreparedUnit" mandatory="false" read-only="false" set="formulation"> </field>
+           <field  id="bcpg:nutrientPreparationReconstituantRef" mandatory="false" read-only="false" set="formulation">
+           <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/product?classNames=bcpg:rawMaterial%5E4,bcpg:finishedProduct,bcpg:localSemiFinishedProduct%5E2,bcpg:semiFinishedProduct%5E2
+							</control-param>
+						</control>
+           </field>
+          <field  id="bcpg:nutrientPreparationReconstituantQty" mandatory="false" read-only="false" set="formulation"> </field>
+          
           
           <field id="bcpg:productSpecifications" mandatory="false" read-only="false" set="formulation">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
@@ -2377,6 +2401,8 @@
           <show force="true" id="bcpg:numberOfServings"/>
           <show force="true" id="bcpg:nutrientPreparationState"/>
           <show force="true" id="bcpg:nutrientPreparedUnit"/>
+          <show force="true" id="bcpg:nutrientPreparationReconstituantRef" />
+		  <show force="true" id="bcpg:nutrientPreparationReconstituantQty"/>
           <show force="true" id="bcpg:productSpecifications"/>
           <show for-mode="view" force="true" id="bcpg:ecoScore"/>
           <show for-mode="view" force="true" id="bcpg:ecoScoreDetails"/>
@@ -2731,6 +2757,15 @@
           </field>
           <field help-id="becpg.forms.help.nutrientPreparationState" id="bcpg:nutrientPreparationState" mandatory="false" read-only="false" set="formulation"> </field>
           <field  id="bcpg:nutrientPreparedUnit" mandatory="false" read-only="false" set="formulation"> </field>
+          <field  id="bcpg:nutrientPreparationReconstituantRef" mandatory="false" read-only="false" set="formulation">
+          <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/product?classNames=bcpg:rawMaterial%5E4,bcpg:finishedProduct,bcpg:localSemiFinishedProduct%5E2,bcpg:semiFinishedProduct%5E2
+							</control-param>
+						</control>
+		 </field>
+          <field  id="bcpg:nutrientPreparationReconstituantQty" mandatory="false" read-only="false" set="formulation"> </field>
+          
+          
           <field help-id="becpg.forms.help.productSpecifications" id="bcpg:productSpecifications" mandatory="false" read-only="false" set="formulation">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
               <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
@@ -3247,6 +3282,9 @@
           <show force="false" id="bcpg:numberOfServings"/>
           <show force="false" id="bcpg:nutrientPreparationState"/>
           <show force="false" id="bcpg:nutrientPreparedUnit"/>
+          <show force="false" id="bcpg:nutrientPreparationQty" />
+          <show force="false" id="bcpg:nutrientPreparationReconstituantRef"/>
+          <show force="false" id="bcpg:nutrientPreparationReconstituantQty"/>
           <show force="false" id="bcpg:productSpecifications"/>
           <show force="false" id="bcpg:ecoScore"/>
           <show force="false" id="bcpg:ecoScoreDetails"/>
