--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
@@ -2157,6 +2157,38 @@
 					</field>
 				</appearance>
 			</form>
+			
+			<form id="filter">
+				<field-visibility>
+					<show id="qa:clType" />
+					<show id="qa:clCharacts" />
+					<show id="qa:cdlFreq" />
+					<show id="qa:clTemperature" />
+					<show id="qa:clMethod" />
+					<show id="rep:reportKinds" force="true" />
+					<show id="qa:clRequired" />
+				</field-visibility>
+				<appearance>
+					<set id="2-col" template="/org/alfresco/components/form/2-column-set.ftl" />
+					<set id="1-col" />
+					<field id="qa:clCharacts" set="2-col">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
+							<control-param name="ds">becpg/autocomplete/characts</control-param>
+						</control>
+					</field>
+					<field id="qa:cdlFreq" set="2-col"/>
+					<field id="qa:clTemperature" set="2-col"/>
+					<field id="qa:clRequired" set="1-col">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+							<control-param name="options">,false|data.boolean.false,true|data.boolean.true
+							</control-param>
+						</control>
+					</field>
+					<field id="qa:clMethod" set="2-col"/>
+					<field id="rep:reportKinds" set="2-col"/>
+				</appearance>
+			</form>
+			
 			<!-- Data Grid view -->
 			<form id="datagrid">
 				<field-visibility>
